# gsm_script

./: Cargo.toml
src/: Stripe_redirect_errors.xlsx  error_category.xlsx  initial_code.py  main.rs
