[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
calamine = "0.19.1"
reqwest = { version = "0.11.17", features = ["json"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
http = "0.2.9"

 